# luchtmans

./: .gitignore  Dockerfile  Dockerfile-dev  README.md  docker-compose-dev.yml  docker-compose.yml  entrypoint-dev.sh  entrypoint.sh  nginx.conf  nginx.conf.template  pyproject.toml  tmp.md
src/: manage.py  requirements.txt
src/lm_project/: asgi.py  settings.py  urls.py  wsgi.py
src/lm_project/locale/nl/LC_MESSAGES/: django.po
src/luchtmans/: admin.py  apps.py  asgi.py  forms.py  models.py  settings.py  translation.py  urls.py  utils.py  views.py  wikidata_api.py  wsgi.py
src/luchtmans/locale/nl/LC_MESSAGES/: django.po
src/luchtmans/migrations/: 0001_initial.py  0002_person_personpersonrelation_person_related_to_and_more.py  0003_alter_address_latitude_alter_address_longitude_and_more.py  0004_periodofresidence.py  0005_religion_personreligion_person_religious_affiliation.py  0006_alter_address_options_alter_country_options_and_more.py  0007_country_name_en_country_name_nl_place_name_en_and_more.py  0008_remove_street_old_name_address_description_and_more.py  0009_binding_format_genreparisiancategory_itemtype_and_more.py  0010_alter_edition_year_of_publication_end_and_more.py  0011_alter_binding_options_alter_collection_options_and_more.py  0012_street_latitude_street_longitude_street_wikidata_id.py  0013_alter_address_latitude_alter_address_longitude_and_more.py  0014_remove_address_latitude_remove_address_longitude_and_more.py
src/static/: apilink.js
src/templates/admin/: base_site.html
