[project]
name = "repo-luchtmans"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.6",
    "django-easy-audit>=1.3.7",
    "django-extensions>=4.1",
    "django-modeltranslation>=0.19.17",
    "django-rosetta>=0.10.2",
    "django-select2>=8.4.3",
    "environs>=14.3.0",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.2.10",
]
